--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -23,6 +23,9 @@
     <p>
         CSSの知識ないんでしょっぱい画面です　ゆるしてくれ
     </p>
+    <p>
+        jsでキャラクター登録所のJSONPのAPI叩いてるだけです　これしか思いつかない敗北者～🌈
+    </p>
 </body>
 <style>
     .mybox {
