--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -33,6 +33,10 @@
         width: 100%;
         max-width: 330px;
     }
+    p{
+        display: inline-block;
+        width: 100%;
+    }
 </style>
 
 <script type="text/javascript">
