--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -9,7 +9,7 @@
 <body>
     <h1>🌳なるほどな🌳</h1>
     <p>
-        いつものキャラシサイトの雑変換です<br>具体的に言えばキャラクター登録所
+        いつものキャラシサイトの雑変換だ<br>飲んでくれ！<br>具体的に言えばキャラクター登録所
     </p>
     <form name="myform">
         <input name="URLinput" type="text" class="mybox" value="" placeholder="ここに駒にしたいキャラシのURLをコピペしてくれ(^^)" />
@@ -21,10 +21,10 @@
             rows="3"></textarea>
     </form>
     <p>
-        CSSの知識ないんでしょっぱい画面です<br>ゆるしてくれ
+        CSSの知識ないんでしょっぱい画面です<br>スマホ対応もできない敗北者～🌈
     </p>
     <p>
-        jsでキャラクター登録所のJSONPのAPI叩いてるだけです<br>これしか思いつかない敗北者～🌈
+        じゃばすくりぷとでキャラクター登録所のJSONPのAPI叩いてるだけです
     </p>
 </body>
 <style>
