--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -17,9 +17,12 @@
 
     </form>
     <form name="resultform">
-        <textarea name="myresult" class="myoutputbox" placeholder="クリップボードへの自動転送うまくいかない場合はここにでたやつをコピペしてくれ(^^)"
-            cols="26" rows="3"></textarea>
+        <textarea name="myresult" class="myoutputbox" placeholder="クリップボードへの自動転送うまくいかない場合はここにでたやつをコピペしてくれ(^^)" cols="26"
+            rows="3"></textarea>
     </form>
+    <p>
+        ロイスはDがあろうとなかろうと3の固定値です　気を付けてね
+    </p>
     <p>
         CSSの知識ないんでしょっぱい画面です<br>スマホ対応もできない敗北者～🌈
     </p>
@@ -34,12 +37,14 @@
         font-size: large;
         max-width: 512px;
     }
+
     .myoutputbox {
         display: inline-block;
         width: 100%;
         max-width: 640px;
     }
-    p{
+
+    p {
         display: inline-block;
         width: 100%;
     }
