--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -22,7 +22,7 @@
             rows="3"></textarea>
     </form>
     <p>
-        ロイスは初期値が3の固定値です　例外はあるけど気を付けてくれ<br>また、ゆとシートでデフォのチャットパレットを使ってる場合、自分で引っ張って来る必要があることを教える<br>でもめんどかったら無法にチェック入れると引っ張れることも教える　無法だけど
+        例外はあるけどロイスは初期値が3の固定値です　気を付けてくれ<br>また、ゆとシートでデフォのチャットパレットを使ってる場合、自分で引っ張って来る必要があることを教える<br>でもめんどかったら無法にチェック入れると引っ張れることも教える　無法だけど
     </p>
     <p>
         CSSの知識ないんでしょっぱい画面です<br>スマホ対応もできない敗北者～🌈
@@ -172,7 +172,7 @@
                                 "max": 300
                             }, {
                                 "label": 'ロイス',
-                                "value": data.loisHave || 3,
+                                "value": data.loisHave !== undefined ? data.loisHave : 3,
                                 "max": data.loisMax || 7
                             }, {
                                 "label": '財産点',
