--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -9,7 +9,7 @@
 <body>
     <h1>🌳なるほどな🌳</h1>
     <p>
-        キャラシサイトのコマ生成器だ<br>飲んでくれ！<br>キャラクター登録所とかゆとシとかに対応してるのをｵｯｼｪﾙ
+        キャラシサイトのコマ生成器だ<br>飲んでくれ！<br>キャラクター登録所とかゆとシとかに対応してるのをｵｯｼｪﾙ<br>ただゆとシに関しては公式discでiphone対応の動きが出てきているので多分使う必要がなくなるんじゃない☆
     </p>
     <form name="myform">
         <input name="URLinput" type="text" class="myinputbox" value="" placeholder="ここに駒にしたいキャラシのURLをコピペしてくれ(^^)" />
@@ -127,10 +127,7 @@
                                 "value": data.baseAbility.society.total
                             }
                         ],
-                        "active": true,
-                        "secret": false,
-                        "invisible": false,
-                        "hideStatus": false,
+                        "active": true, "secret": false, "invisible": false, "hideStatus": false,
                         "commands": "◆汎用チャットパレット\n//上昇\n{侵蝕率}+1d10　登場/リザレクト\n{侵蝕率}+nd10　ジェネシフト\n{侵蝕率}+2d10　衝動判定\n\n//判定用\n({肉体}+{侵蝕率B})dx　【肉体】\n({感覚}+{侵蝕率B})dx　【感覚】\n({精神}+{侵蝕率B})dx　【精神】\n({社会}+{侵蝕率B})dx　【社会】\n\n({感覚}+{侵蝕率B})dx　〈知覚〉\n({精神}+{侵蝕率B})dx　〈意志〉\n\n({肉体}+{侵蝕率B})dx　〈運転：〉\n({感覚}+{侵蝕率B})dx　〈芸術：〉\n({精神}+{侵蝕率B})dx　〈知識：〉\n({社会}+{侵蝕率B})dx　〈情報：〉\n\n//命中+コンボ\nコンボ『名称』タイミング/技能/射程/対象/侵蝕率n/効果\n({}+{侵蝕率B})dx8　99↓\n({}+{侵蝕率B})dx7　100↑\n\nd10+\nd10+\n\n//回避\n({肉体}+{侵蝕率B})dx　〈回避〉\n\n//バックトラック\n自己申告\n侵蝕率{侵蝕率}% ロイス{ロイス}個\n\n{侵蝕率}-{ロイス}d10　通常振り/追加振り\n{侵蝕率}-({ロイス}+{ロイス})d10　2倍振り"
                     }
                 };
@@ -188,7 +185,7 @@
                                 "max": data.savingTotal
                             }
                         ],
-                        "params": (JSON.stringify(palette.parameters) !== JSON.stringify([]) && palette.parameters!==undefined)? palette.parameters :
+                        "params": (JSON.stringify(palette.parameters) !== JSON.stringify([]) && palette.parameters !== undefined) ? palette.parameters :
                             [
                                 {
                                     "label": "肉体",
@@ -228,10 +225,7 @@
                                     "value": data.skillTotalProcure
                                 }
                             ] || [],
-                        "active": true,
-                        "secret": false,
-                        "invisible": false,
-                        "hideStatus": false,
+                        "active": true, "secret": false, "invisible": false, "hideStatus": false,
                         "commands": palette.palette || '',
                     }
                 };
