--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DX3コマ作成🌳</title>
+    <title>DX3コマ作成機</title>
 </head>
 
 <body>
-    <h1>🌳なるほどな🌳</h1>
+    <h1>DXコマ作成機</h1>
     <p>
-        キャラシサイトのコマ生成器だ<br>飲んでくれ！<br>キャラクター登録所とかゆとシとかに対応してるのをｵｯｼｪﾙ<br>ただゆとシに関しては公式discでiphone対応の動きが出てきているので多分使う必要がなくなるんじゃない☆
+        キャラシサイトのコマ生成機だ<br>飲んでくれ！<br>いつものサイト(<a href= "https://character-sheets.appspot.com/dx3/edit.html" >キャラクター登録所</a>)とか<a href= "https://yutorize.2-d.jp/ytsheet/dx3rd/" >ゆとシ</a>とかに対応してるのをｵｯｼｪﾙ<br>ただゆとシに関しては公式discでiphone対応の動きが出てきているので多分使う必要がなくなるとは思ってんすがね…
     </p>
     <form name="myform" onsubmit="makeDXCharacter(); return false;">
         <input name="URLinput" type="text" class="myinputbox" value="" placeholder="ここに駒にしたいキャラシのURLをコピペしてくれ(^^)" />
@@ -22,15 +22,15 @@
             rows="3"></textarea>
     </form>
     <p>
-        例外はあるけどロイスは初期値が3の固定値です　気を付けてくれ<br>また、ゆとシートでデフォのチャットパレットを使ってる場合、パラメータも含めて自分で引っ張って来る必要があることを教える<br>でもめんどかったら無法にチェック入れると引っ張れることも教える　無法だけど
+        例外はあるけどロイスは初期値が3の固定値です　気を付けてくれ<br>また、ゆとシートでデフォのチャットパレットを使ってる場合、パラメータも含めて自分で引っ張って来る必要があることを教える<br>でもめんどかったら無法にチェック入れると引っ張れることも教える　CROS回避する無法だけど
     </p>
     <p>
-        CSSの知識ないんでしょっぱい画面です<br>スマホ対応もできない敗北者～🌈
+        htmlの知識もCSSの知識もないんでしょっぱい画面だ<br>スマホ対応もできない敗北者～🌈
     </p>
     <p>
         結局javascriptでいろんなとこのJSONのAPI叩いてるだけなのを教える
     </p>
-    <h3>🌳変更履歴🌳</h3>
+    <h3>変更履歴</h3>
     <p>
         ver1.3<br>
         ゆとシで自作チャパレを使っている場合かつチャパレに能力値変数がない場合プリセットのパラメータを使用するように<br>
