--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -3,35 +3,48 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DX3コマ作成機</title>
+    <title>コマ作成機</title>
 </head>
 
 <body>
-    <h1>DXコマ作成機</h1>
+    <h1>コマ作成機</h1>
     <p>
-        キャラシサイトのコマ生成機だ<br>飲んでくれ！<br>いつものサイト(<a href= "https://character-sheets.appspot.com/dx3/edit.html" >キャラクター登録所</a>)とか<a href= "https://yutorize.2-d.jp/ytsheet/dx3rd/" >ゆとシ</a>とかに対応してるのをｵｯｼｪﾙ<br>ただゆとシに関しては公式discでiphone対応の動きが出てきているので多分使う必要がなくなるとは思ってんすがね…
+        キャラシサイトのコマ生成機だ<br>
+        飲んでくれ！<br>
+        <a href= "https://character-sheets.appspot.com/dx3/edit.html" >いつものサイト</a>とか<a href= "https://yutorize.2-d.jp/ytsheet/dx3rd/" >ゆとシ</a>とかに対応してるのをｵｯｼｪﾙ<br>
+        <a href= "https://character-sheets.appspot.com/satasupe/edit.html" >サタスペ</a>にも対応始めました…だろ？
     </p>
     <form name="myform" onsubmit="makeDXCharacter(); return false;">
-        <input name="URLinput" type="text" class="myinputbox" value="" placeholder="ここに駒にしたいキャラシのURLをコピペしてくれ(^^)" />
+        <input name="URLinput" type="text" class="myinputbox" value="" placeholder="ここにキャラシのURLをコピペしてくれ(^^)" />
         <input name="btn" type="button" value="コマ作成・皇" onclick="makeDXCharacter()" />
-        <label><input type="checkbox" id="YutoLimiter">自鯖のゆとシを使う</label>
-        <label><input type="checkbox" id="corsLimiter">無法</label>
+        <label><input type="checkbox" id="YutoLimiter">公式以外のゆとシ</label>
+        <label><input type="checkbox" id="corsLimiter">どうしても</label>
     </form>
     <form name="resultform">
         <textarea name="myresult" class="myoutputbox" placeholder="クリップボードへの自動転送うまくいかない場合はここにでたやつをコピペしてくれ(^^)" cols="26"
             rows="3"></textarea>
     </form>
     <p>
-        例外はあるけどロイスは初期値が3の固定値です　気を付けてくれ<br>また、ゆとシートでデフォのチャットパレットを使ってる場合、パラメータも含めて自分で引っ張って来る必要があることを教える<br>でもめんどかったら無法にチェック入れると引っ張れることも教える　CROS回避する無法だけど
+        DXの場合ロイスは初期値が3の固定値…だろ？　Dロイス等に合わせて修正してくれ(^^)<br>
+        また、ゆとシートでデフォのチャットパレットを使ってる場合、パラメータも含めて自分で引っ張って来る必要があることを教える<br>
+        でもめんどかったらどうしてもにチェック入れると引っ張れることも教える<br>
+        でもCROS回避する無法なので気になるなら手動でチャパレ引っ張ればいいんじゃないか？(業界関係者)<br>
+        <br>
+        サタスペの場合サイフなど卓跨いでも回復しないリソースがあることを教える<br>
+        トラウマついてたら精神点の最大値減ったりするな　ルフィ<br>
+        でもこの生成機はその辺あんまり考えないので修正は任せる…だろ？
     </p>
     <p>
-        htmlの知識もCSSの知識もないんでしょっぱい画面だ<br>スマホ対応もできない敗北者～🌈
+        htmlの知識もCSSの知識もないんでしょっぱい画面だ<br>
+        できるシャンカーはプルリクくれ
     </p>
     <p>
-        結局javascriptでいろんなとこのJSONのAPI叩いてるだけなのを教える
+        結局javascriptでいろんなとこのJSONのAPI叩いてるだけなのを教える　API対応クソありがてェだろ
     </p>
     <h3>変更履歴</h3>
     <p>
+        ver1.4<br>
+        サタスペ対応始めました…だろ？<br>
         ver1.3<br>
         ゆとシで自作チャパレを使っている場合かつチャパレに能力値変数がない場合プリセットのパラメータを使用するように<br>
         ついでに無法無しでもプリセットが出てくるようになりました<br>
@@ -72,7 +85,7 @@
             alert("error OCN");
             return
         }
-        if (checkCharacterSheets(charURL)) {
+        if (checkDXCharacterSheets(charURL)) {
             var s = document.createElement("script");
             s.src = "https://" + charURL.hostname + "/dx3/display?ajax=1&callback=OCLDX3&key=" + (new URLSearchParams(charURL.search).get('key'));
             OCLDX3 = (data) => {
@@ -129,6 +142,88 @@
                         ],
                         "active": true, "secret": false, "invisible": false, "hideStatus": false,
                         "commands": "◆汎用チャットパレット\n//上昇\n{侵蝕率}+1d10　登場/リザレクト\n{侵蝕率}+nd10　ジェネシフト\n{侵蝕率}+2d10　衝動判定\n\n//判定用\n({肉体}+{侵蝕率B})dx　【肉体】\n({感覚}+{侵蝕率B})dx　【感覚】\n({精神}+{侵蝕率B})dx　【精神】\n({社会}+{侵蝕率B})dx　【社会】\n\n({感覚}+{侵蝕率B})dx　〈知覚〉\n({精神}+{侵蝕率B})dx　〈意志〉\n\n({肉体}+{侵蝕率B})dx　〈運転：〉\n({感覚}+{侵蝕率B})dx　〈芸術：〉\n({精神}+{侵蝕率B})dx　〈知識：〉\n({社会}+{侵蝕率B})dx　〈情報：〉\n\n//命中+コンボ\nコンボ『名称』タイミング/技能/射程/対象/侵蝕率n/効果\n({}+{侵蝕率B})dx8　99↓\n({}+{侵蝕率B})dx7　100↑\n\nd10+\nd10+\n\n//回避\n({肉体}+{侵蝕率B})dx　〈回避〉\n\n//バックトラック\n自己申告\n侵蝕率{侵蝕率}% ロイス{ロイス}個\n\n{侵蝕率}-{ロイス}d10　通常振り/追加振り\n{侵蝕率}-({ロイス}+{ロイス})d10　2倍振り"
+                    }
+                };
+
+                var Text = JSON.stringify(data2);
+                document.forms.resultform.myresult.value = Text;
+                navigator.clipboard.writeText(Text)
+                    .then(function () {
+                        alert('クリップボードに出力・皇\nココフォリア盤面に張り付けてくれ(^^)');
+                    })
+                    .catch(err => {
+                        alert('クリップボードに出力失敗🌈\n下のボックスの文字列をコピペしてココフォリア盤面に張り付けてくれ(^^)');
+                    });
+            };
+            document.body.appendChild(s);
+        }
+        else if (checkSatasupeCharacterSheets(charURL)) {
+            var s = document.createElement("script");
+            s.src = "https://" + charURL.hostname + "/satasupe/display?ajax=1&callback=OCLSatasupe&key=" + (new URLSearchParams(charURL.search).get('key'));
+            OCLSatasupe = (data) => {
+                var data2 = {
+                    "kind": "character",
+                    "data": {
+                        "name": data.base.name || data.base.nameKana,
+                        "externalUrl": charURL.href,
+                        "initiative": Number(data.base.power.initiative) || 0,
+                        "status": [
+                            {
+                                "label": "肉体点",
+                                "value": 10,
+                                "max": 10
+                            },
+                            {
+                                "label": "精神点",
+                                "value": 10,
+                                "max": 10
+                            },
+                            {
+                                "label": "サイフ",
+                                "value": Number(data.base.abl.life.value)-Number(data.cond.wallet.value),
+                                "max": data.base.abl.life.value
+                            }
+                        ],
+                        "params": [
+                            {
+                                "label": "犯罪",
+                                "value": data.base.abl.crime.value
+                            },
+                            {
+                                "label": "生活",
+                                "value": data.base.abl.life.value
+                            },
+                            {
+                                "label": "恋愛",
+                                "value": data.base.abl.love.value
+                            },
+                            {
+                                "label": "教養",
+                                "value": data.base.abl.culture.value
+                            },
+                            {
+                                "label": "戦闘",
+                                "value": data.base.abl.combat.value
+                            },
+                            {
+                                "label": "肉体",
+                                "value": data.base.gift.body.value
+                            },
+                            {
+                                "label": "精神",
+                                "value": data.base.gift.mind.value
+                            },
+                            {
+                                "label": "攻撃力",
+                                "value": data.base.power.attack
+                            },
+                            {
+                                "label": "破壊力",
+                                "value": data.base.power.destroy
+                            }
+                        ],
+                        "active": true, "secret": false, "invisible": false, "hideStatus": false,
+                        "commands": "◆行為判定(nに難易度を入れる)\n({犯罪})R>=n[,1] 犯罪 \n({生活})R>=n[,1] 生活\n({恋愛})R>=n[,1] 恋愛\n({教養})R>=n[,1] 教養\n({戦闘})R>=n[,1] 戦闘\n({肉体})R>=n[1,1] 肉体\n({精神})R>=n[1,1] 精神\nSR{性業値} [性業値判定]\n\n◆戦闘\n({攻撃力})R>=n[,1]\n\n<セーブ/飛ぶ>\n({肉体})R>=n[,1] [セーブ判定]\n({肉体})R>=n[1,2] [跳ぶ]\n\n<ファンブル他>\nFumbleT [命中ファンブル]\nFatalT [致命傷表]\nEnterT [登場表]\nBudTT [バッドトリップ表]\n\n<その後表>\nAfterT <その後表>"
                     }
                 };
 
@@ -248,8 +343,11 @@
         }
     };
 
-    function checkCharacterSheets(url) {
+    function checkDXCharacterSheets(url) {
         return (url.hostname === "character-sheets.appspot.com" && url.pathname.match(/\/dx3\/edit\.html$/));
+    }
+    function checkSatasupeCharacterSheets(url) {
+        return (url.hostname === "character-sheets.appspot.com" && url.pathname.match(/\/satasupe\/edit\.html$/));
     }
     function checkYutorize(url) {
         return ((url.hostname === "yutorize.2-d.jp" || document.getElementById('YutoLimiter').checked) && url.pathname.match(/\/dx3rd\//));
