--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -26,9 +26,9 @@
     </form>
     <p>
         DXの場合ロイスは初期値が3の固定値…だろ？　Dロイス等に合わせて修正してくれ(^^)<br>
-        また、ゆとシートでデフォのチャットパレットを使ってる場合、パラメータも含めて自分で引っ張って来る必要があることを教える<br>
-        でもめんどかったらどうしてもにチェック入れると引っ張れることも教える<br>
-        でもCROS回避する無法なので気になるなら手動でチャパレ引っ張ればいいんじゃないか？(業界関係者)<br>
+        またゆとシでデフォのチャットパレットを使ってる場合、パラメータも含めて自分で引っ張って来る必要があることを教える<br>
+        めんどかったらどうしてもにチェック入れると引っ張れることも教える<br>
+        ただCROS回避する無法なので気になるなら手動でチャパレ引っ張ればいいんじゃないか？(業界関係者)<br>
         <br>
         サタスペの場合サイフなど卓跨いでも回復しないリソースがあることを教える<br>
         トラウマついてたら精神点の最大値減ったりするな　ルフィ<br>
