--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -62,6 +62,8 @@
     </p>
     <h3>変更履歴</h3>
     <p>
+        ver1.6<br>
+        DXのキャラシで情報:UGNなどの技能レベルが入力されてる奴はチャパレにも反映するように<br>
         ver1.5<br>
         DXでDロイスの個数に対応して初期ロイス数減らすように<br>
         ロイスの種類欄にDが含まれていると反応するけど？<br>
@@ -166,7 +168,7 @@
                             }
                         ],
                         "active": true, "secret": false, "invisible": false, "hideStatus": false,
-                        "commands": "◆汎用チャットパレット\n//上昇\n{侵蝕率}+1d10　登場/リザレクト\n{侵蝕率}+nd10　ジェネシフト\n{侵蝕率}+2d10　衝動判定\n\n//判定用\n({肉体}+{侵蝕率B})dx　【肉体】\n({感覚}+{侵蝕率B})dx　【感覚】\n({精神}+{侵蝕率B})dx　【精神】\n({社会}+{侵蝕率B})dx　【社会】\n\n({感覚}+{侵蝕率B})dx　〈知覚〉\n({精神}+{侵蝕率B})dx　〈意志〉\n\n({肉体}+{侵蝕率B})dx　〈運転：〉\n({感覚}+{侵蝕率B})dx　〈芸術：〉\n({精神}+{侵蝕率B})dx　〈知識：〉\n({社会}+{侵蝕率B})dx　〈情報：〉\n\n//命中+コンボ\nコンボ『名称』タイミング/技能/射程/対象/侵蝕率n/効果\n({}+{侵蝕率B})dx8　99↓\n({}+{侵蝕率B})dx7　100↑\n\nd10+\nd10+\n\n//回避\n({肉体}+{侵蝕率B})dx　〈回避〉\n\n//バックトラック\n自己申告\n侵蝕率{侵蝕率}% ロイス{ロイス}個\n\n{侵蝕率}-{ロイス}d10　通常振り/追加振り\n{侵蝕率}-({ロイス}+{ロイス})d10　2倍振り"
+                        "commands": ""
                     }
                 };
                 //技能レベル設定
@@ -188,6 +190,10 @@
                     param = {"label": skill_name,"value": String(Lv)};
                     data2.data.params.push(param)
                 });
+                unten="";
+                geijutu="";
+                tisiki="";
+                jouhou="";
                 data.skills.B.forEach(n=>{
                     if(n.name1){
                         alv = n.lv1;
@@ -196,6 +202,7 @@
                         dlv = dlv?Number(dlv):0;
                         param = {"label": "運転:"+n.name1,"value": String(alv+dlv)};
                         data2.data.params.push(param)
+                        unten+="({肉体}+{侵蝕率B})dx+{運転:"+n.name1+"}　〈運転:"+n.name1+"〉\n"
                     }
                     if(n.name2){
                         alv = n.lv2;
@@ -204,6 +211,7 @@
                         dlv = dlv?Number(dlv):0;
                         param = {"label": "芸術:"+n.name2,"value": String(alv+dlv)};
                         data2.data.params.push(param)
+                        geijutu+="({感覚}+{侵蝕率B})dx+{芸術:"+n.name2+"}　〈芸術:"+n.name2+"〉\n"
                     }
                     if(n.name3){
                         alv = n.lv3;
@@ -212,6 +220,7 @@
                         dlv = dlv?Number(dlv):0;
                         param = {"label": "知識:"+n.name3,"value": String(alv+dlv)};
                         data2.data.params.push(param)
+                        tisiki+="({精神}+{侵蝕率B})dx+{知識:"+n.name3+"}　〈知識:"+n.name3+"〉\n"
                     }
                     if(n.name4){
                         alv = n.lv4;
@@ -220,8 +229,11 @@
                         dlv = dlv?Number(dlv):0;
                         param = {"label": "情報:"+n.name4,"value": String(alv+dlv)};
                         data2.data.params.push(param)
+                        jouhou+="({社会}+{侵蝕率B})dx+{情報:"+n.name4+"}　〈情報:"+n.name4+"〉\n"
                     }
                 });
+                
+                data2.data.commands="◆汎用チャットパレット\n//上昇\n{侵蝕率}+1d10　登場/リザレクト\n{侵蝕率}+nd10　ジェネシフト\n{侵蝕率}+2d10　衝動判定\n\n//判定用\n({肉体}+{侵蝕率B})dx　【肉体】\n({感覚}+{侵蝕率B})dx　【感覚】\n({精神}+{侵蝕率B})dx　【精神】\n({社会}+{侵蝕率B})dx　【社会】\n\n({肉体}+{侵蝕率B})dx+{白兵}　〈白兵〉\n({肉体}+{侵蝕率B})dx+{回避}　〈回避〉\n"+unten+"({感覚}+{侵蝕率B})dx+{射撃}　〈射撃〉\n({感覚}+{侵蝕率B})dx+{知覚}　〈知覚〉\n"+geijutu+"({精神}+{侵蝕率B})dx+{RC}　〈RC〉\n({精神}+{侵蝕率B})dx+{意志}　〈意志〉\n"+tisiki+"({社会}+{侵蝕率B})dx+{交渉}　〈交渉〉\n({社会}+{侵蝕率B})dx+{調達}　〈調達〉\n"+jouhou+"\n//命中+コンボ\nコンボ『名称』タイミング/技能/射程/対象/侵蝕率n/効果\n({}+{侵蝕率B})dx8　99↓\n({}+{侵蝕率B})dx7　100↑\n\nd10+\nd10+\n\n\n//バックトラック\n自己申告\n侵蝕率{侵蝕率}% ロイス{ロイス}個\n\n{侵蝕率}-{ロイス}d10　通常振り/追加振り\n{侵蝕率}-({ロイス}+{ロイス})d10　2倍振り";
                 
                 var Text = JSON.stringify(data2);
                 document.forms.resultform.myresult.value = Text;
