性業値が入ってないやん！

--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -94,6 +94,16 @@
         display: inline-block;
         width: 100%;
     }
+    
+    .gaming {
+        /* 横長で虹色を作る */
+        background: linear-gradient(to right, Magenta, yellow, Cyan, Magenta) 0% center/200%;
+        animation: gaming 2s linear infinite;
+      }
+      @keyframes gaming {
+        /* backgroundを移動させる */
+        100% { background-position-x: 200%; }
+  }
 </style>
 
 <script type="text/javascript">
@@ -273,7 +283,12 @@
                                 "label": "サイフ",
                                 "value": Number(data.base.abl.life.value)-Number(data.cond.wallet.value),
                                 "max": data.base.abl.life.value
-                            }
+                            },
+                            {
+                                "label": "性業値",
+                                "value":data.base.emotion,
+                                "max": 0
+                            },
                         ],
                         "params": [
                             {
