--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -62,6 +62,9 @@
     </p>
     <h3>変更履歴</h3>
     <p>
+        ver1.7<br>
+        サタスペのキャラシで性業値の設定忘れてた🌈<br>
+        こんな感じにバグがある可能性濃厚なので見つけたら報告してくれると泣いて喜ぶけど<br>
         ver1.6<br>
         DXのキャラシで情報:UGNなどの技能レベルが入力されてる奴はチャパレにも反映するように<br>
         ver1.5<br>
