変更履歴修正

--- a/DXCharacter.html
+++ b/DXCharacter.html
@@ -63,7 +63,7 @@
     <h3>変更履歴</h3>
     <p>
         ver1.8<br>
-        サタスペのチャパレで「({犯罪}+0)R>=n[,1] 犯罪」となっていたのを「({犯罪}<font color="#ff0000">+0</font>)R>=n[,1] 犯罪」に<br>
+        サタスペのチャパレで「({犯罪})R>=n[,1] 犯罪」となっていたのを「({犯罪}<font color="#ff0000">+0</font>)R>=n[,1] 犯罪」に<br>
         あーこれおれがダイス追加するときに何度も計算式間違えたからか<br>
         DXのチャパレでコンボ欄になんか書いていればそれが反映されるように<br>
         100%以上のコンボは未記入の部分を100%未満の部分から継承するようになってるけど？<br>
